<resources>
    <string name="app_name">XML Layout</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_service">How was the Service?</string>
    <string name="amazing">Amazing (20%)</string>
    <string name="good">Good (18%)</string>
    <string name="okay">Okay (15%)</string>
    <string name="round_up">Round Up Tip?</string>
    <string name="calcButton">Calculate</string>
    <string name="tipView">Tip Amount</string>
    <string name="tipViewDesc">This is tip view Desc</string>
</resources>